--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,4 @@
-org.gradle.jvmargs=-Xmx512m -XX:MaxPermSize=128m
+org.gradle.jvmargs=-Xmx512m
 org.gradle.caching=true
 org.gradle.parallel=true
 org.gradle.vfs.watch=true
