--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -7,16 +7,14 @@ jobs:
   release:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-java@v2
+      - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4
+      - uses: actions/setup-java@3a4f6e1af504cf6a31855fa899c6aa5355ba6c12 # v4
         with:
           java-version: '11'
           distribution: 'zulu'
-      - uses: gradle/wrapper-validation-action@v1
-      - uses: gradle/gradle-build-action@v2
-        with:
-          arguments: |
-            publishPlugins
-            -Pgradle.publish.key=${{ secrets.GRADLE_PLUGIN_KEY }}
-            -Pgradle.publish.secret=${{ secrets.GRADLE_PLUGIN_SECRET }}
-            --no-configuration-cache
+      - uses: gradle/actions/setup-gradle@ed408507eac070d1f99cc633dbcf757c94c7933a # v4.4.3
+      - run: |
+          ./gradlew publishPlugins
+          -Pgradle.publish.key=${{ secrets.GRADLE_PLUGIN_KEY }}
+          -Pgradle.publish.secret=${{ secrets.GRADLE_PLUGIN_SECRET }}
+          --no-configuration-cache
